--- a/frontend/static/stylesheets/sass/_vars.sass
+++ b/frontend/static/stylesheets/sass/_vars.sass
@@ -20,5 +20,4 @@ $cMenuText: text-contrast
 
 // Icons
 $policy: sprite-map("icons/policy/*.png")
-
-//image-url('bg-body.png')
+$spriteHeight: image-height('icons/policy-sc13beb8db6.png') / 8
