--- a/frontend/static/stylesheets/css/screen.css
+++ b/frontend/static/stylesheets/css/screen.css
@@ -1,278 +1,117 @@
-/* line 17, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
+/*
+Syntax error: Invalid CSS after "append": expected selector, was "($positions, $j..."
+        on line 29 of /home/screeech/Documents/cdndevhack/frontend/static/stylesheets/sass/_vars.sass, in `retina-sprites'
+        from line 74 of /home/screeech/Documents/cdndevhack/frontend/static/stylesheets/sass/screen.sass
 
-/* line 22, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html {
-  line-height: 1;
-}
-
-/* line 24, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 26, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 28, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 30, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 103, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 32, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 116, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
-}
-
-/* line 61, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-* html {
-  font-size: 56.25%;
-}
-
-/* line 64, ../../../../../../.gem/ruby/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
-html {
-  font-size: 9px;
-  line-height: 2em;
-}
-
-/* line 8, ../sass/screen.sass */
-html, body {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-/* line 10, ../sass/screen.sass */
-body {
-  font-family: "Raleway", sans-serif;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 13, ../sass/screen.sass */
-.nav-wrapper {
-  width: 297px;
-  position: absolute;
-  top: 9px;
-  bottom: 9px;
-  left: 9px;
-  right: auto;
-  overflow: hidden;
-}
-
-/* line 17, ../sass/screen.sass */
-nav {
-  width: 312px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: auto;
-  overflow-y: scroll;
-}
-/* line 21, ../sass/screen.sass */
-nav:hover {
-  cursor: pointer;
-}
-
-/* line 23, ../sass/screen.sass */
-ul {
-  list-style: none;
-}
-
-/* line 25, ../sass/screen.sass */
-li {
-  display: block;
-}
-
-/* line 27, ../sass/screen.sass */
-h2 {
-  font-weight: 700;
-}
-
-/* line 29, ../sass/screen.sass */
-h3, h4 {
-  font-weight: 200;
-}
-
-/* line 31, ../sass/screen.sass */
-h2, h3 {
-  font-size: 3em;
-  line-height: 1.33333em;
-  line-height: 2em;
-  padding-left: 18px;
-}
-
-/* line 35, ../sass/screen.sass */
-.year {
-  background-color: #d15f35;
-  color: white;
-}
-
-/* line 37, ../sass/screen.sass */
-.month {
-  background-color: #ce856a;
-}
-
-/* line 39, ../sass/screen.sass */
-.day {
-  position: relative;
-  font-size: 2em;
-  line-height: 2em;
-  line-height: 1em;
-  color: #323232;
-  background-color: white;
-}
-/* line 45, ../sass/screen.sass */
-.day h4 {
-  display: inline-block;
-  vertical-align: middle;
-}
-/* line 49, ../sass/screen.sass */
-.day li {
-  height: 64px;
-}
-
-/* line 52, ../sass/screen.sass */
-time {
-  position: absolute;
-  top: 4.5px;
-  right: 19.5px;
-  font-size: 9px;
-  font-weight: 700;
-}
-
-/* line 58, ../sass/screen.sass */
-.policy {
-  display: inline-block;
-  vertical-align: middle;
-  height: 32px;
-  width: 32px;
-  margin: 16px;
-  margin-left: 8px;
-  background-image: url('/static/img/icons/policy-sc13beb8db6.png');
-  background-size: 32px 256px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p1-environmental-aid {
-  background-position: 0 0px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p2-biodiversity {
-  background-position: 0 -32px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p3-good-governence {
-  background-position: 0 -64px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p4-gender-equality {
-  background-position: 0 -96px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p5-climate-change {
-  background-position: 0 -128px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p6-unknown {
-  background-position: 0 -160px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p7-anti-desertification {
-  background-position: 0 -192px;
-}
-/* line 69, ../sass/screen.sass */
-.policy.p8-trade-development {
-  background-position: 0 -224px;
-}
-
-/* line 71, ../sass/screen.sass */
-#map-wrap {
-  position: absolute;
-  top: 0;
-  bottom: 50%;
-  left: 306px;
-  right: 0;
-}
-
-/* line 73, ../sass/screen.sass */
-#map-canvas {
-  position: absolute;
-  top: 9px;
-  bottom: 4.5px;
-  left: 9px;
-  right: 9px;
-}
-
-/* line 75, ../sass/screen.sass */
-#info-wrap {
-  position: absolute;
-  top: 50%;
-  bottom: 0;
-  left: 306px;
-  right: 0;
-}
-
-/* line 77, ../sass/screen.sass */
-#desc-wrap {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 50%;
-}
-
-/* line 79, ../sass/screen.sass */
-#desc {
-  position: absolute;
-  top: 4.5px;
-  bottom: 9px;
-  left: 9px;
-  right: 9px;
-  padding: 2.5rem 3rem;
-  text-align: justify;
-  overflow: hidden;
-  background-color: #dfd0d6;
-}
+Backtrace:
+/home/screeech/Documents/cdndevhack/frontend/static/stylesheets/sass/_vars.sass:29:in `retina-sprites'
+/home/screeech/Documents/cdndevhack/frontend/static/stylesheets/sass/screen.sass:74
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:1147:in `expected'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/parser.rb:1083:in `expected'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/scss/static_parser.rb:21:in `parse_selector'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:314:in `visit_rule'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:161:in `block (3 levels) in visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:161:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:161:in `block (2 levels) in visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:159:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:159:in `block in visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:158:in `visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:320:in `visit_rule'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:161:in `block (3 levels) in visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:161:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:161:in `block (2 levels) in visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:159:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:159:in `block in visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:158:in `visit_each'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:268:in `block (3 levels) in visit_mixin'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:268:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:268:in `block (2 levels) in visit_mixin'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:268:in `block in visit_mixin'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:70:in `perform_arguments'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:263:in `visit_mixin'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:320:in `visit_rule'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:128:in `visit_root'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:7:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/tree/root_node.rb:20:in `render'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:315:in `_render'
+/var/lib/gems/1.9.1/gems/sass-3.2.10/lib/sass/engine.rb:262:in `render'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `block (2 levels) in compile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `block in compile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `block (2 levels) in run'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `each'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `block in run'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:147:in `recompile'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `call'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `run_callback'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:55:in `callback_action'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:35:in `update'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:39:in `block in modified'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `each'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `modified'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:18:in `refresh'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block (2 levels) in run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `each'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block in run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `loop'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/monitor.rb:26:in `run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm.rb:70:in `monitor'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:87:in `perform'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/bin/compass:30:in `block in <top (required)>'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `call'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `<top (required)>'
+/usr/local/bin/compass:23:in `load'
+/usr/local/bin/compass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Invalid CSS after \"append\": expected selector, was \"($positions, $j...\"\A         on line 29 of /home/screeech/Documents/cdndevhack/frontend/static/stylesheets/sass/_vars.sass, in `retina-sprites'\A         from line 74 of /home/screeech/Documents/cdndevhack/frontend/static/stylesheets/sass/screen.sass"; }
